...
    <string name="apply">Apply</string>
    <string name="confirm">Confirm</string>
    <string name="suggested">Suggested</string>
    <string name="other">Other</string>
    <string name="favourites_failure">Could not modify favourite</string>
    <string name="delete_failure">Could not delete resource</string>
    <string name="shared_with">Shared with</string>
    <string name="location">Location</string>
    <string name="content_not_available">The content is not available anymore</string>
    <string name="consent">I have read and consent</string>
    <string name="accessibility_policies_accept">Accept</string>
    <string name="accessibility_policies_decline">Decline</string>
    <string name="name_suspended">%s (suspended)</string>
    <string name="name_expired">%s (expired)</string>
...
    <string name="logout_dialog_message">If you sign out you will need to sign in again.</string>
    <string name="logout_dialog_sign_out">Sign out</string>

    <string name="no_username">no username</string>

    <string name="more_launch_website">Launch website</string>
    <string name="more_copy_uri">Copy URI</string>
    <string name="more_copy_password">Copy password</string>
    <string name="more_copy_username">Copy username</string>
    <string name="more_copy_metadata_desc">Copy metadata description</string>
    <string name="more_copy_note">Copy note</string>
    <string name="more_edit">Edit</string>
    <string name="more_delete">Delete</string>
    <string name="more_share">Share</string>
    <string name="more_add_to_favourite">Add to favourite</string>
    <string name="more_remove_from_favourite">Remove from favourite</string>

...

    <string name="switch_account_see_details">See details</string>
    <string name="switch_account_sign_out">Sign out</string>
    <string name="switch_account_manage_accounts">Manage accounts</string>
    <string name="switch_account_title">Switch account</string>
    <string name="filters_menu_title">Filter view by</string>
    <string name="filters_menu_all_items">All items</string>
    <string name="filters_menu_last_used">Last used (default)</string>
    <string name="filters_menu_favourites">Favourites</string>
    <string name="filters_menu_recently_modified">Recently modified</string>
    <string name="filters_menu_shared_with_me">Shared with me</string>
    <string name="filters_menu_owned_by_me">Owned by me</string>
    <string name="filters_menu_expiry">Expiry</string>
...

    <string name="main_menu_home">Home</string>
    <string name="main_menu_settings">Settings</string>
    <string name="main_menu_otp">TOTP</string>
    <string name="main_chrome_native_autofill_setup_success">Chrome autofill setup success</string>

    <string name="resource_details_username_header">Username</string>
    <string name="resource_details_password_header">Password</string>
    <string name="resource_details_totp_header">Totp</string>
    <string name="resource_details_url_header">Main URI</string>
    <string name="resource_details_expiry_header">Expiry</string>
    <string name="resource_details_additional_uris">Additional URI</string>
    <string name="resource_details_description_header">Description</string>
    <string name="resource_details_note_header">Note</string>
    <string name="resource_details_note_content">Content</string>
    <string name="resource_details_pin_code_header">Pin code</string>
    <string name="resource_details_pin_code_code">Code</string>
    <string name="resource_details_tags_header">Tags</string>
    <string name="hidden_secret"
        translatable="false">••••••••••••••••••</string>
    <string name="resource_details_encrypted_description">Description is encrypted</string>
    <string name="action_show">Show</string>
    <string name="action_hide">Hide</string>
    <string name="action_copy">Copy</string>
    <string name="resource_details_information">Information</string>
    <string name="resource_details_invalid_totp_scanned">Invalid TOTP QR code scanned</string>
    <string name="resource_details_metadata_header">Metadata</string>
    <string name="resource_details_custom_fields_header">Custom fields</string>
    <string name="resource_details_upgrade_available_header">Upgrade available</string>
    <string name="resource_details_upgrade_panel_message">This is a legacy resource. Upgrade for security improvements and new features.</string>
    <string name="resource_details_upgrade_action">Upgrade</string>
    <string name="resource_details_upgrade_learn_more">Learn more</string>
    <string name="resource_details_upgrade_success">Resource upgraded.</string>
...
