package net.svaroh.passly.testtags.composetags

object ResourceDetails {
    const val MORE_ICON = "ResourceDetailsMoreIcon"
    const val NOTE_SECTION = "ResourceDetailsNoteSection"
    const val PIN_CODE_SECTION = "ResourceDetailsPinCodeSection"
}
